--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,21 +1,31 @@
 server {
     listen 80;
     server_name socool.ai;
-
-    return 301 https://$host$request_uri;
+    return 301 https://$server_name$request_uri;
 }
+
 server {
     listen 443 ssl http2;
-    server_name socool.ai;
+    listen [::]:443 ssl http2;
 
-    ssl_certificate          /etc/nginx/ssl/socool.pem;
-    ssl_certificate_key      /etc/nginx/ssl/socool.key;
+    server_name app.tmessage.net;
 
-    client_max_body_size 100M;
-    autoindex   off;
+    ssl_certificate     /etc/ssl/socool.pem;
+    ssl_certificate_key /etc/ssl/socool.key;
 
-    location / {
-        proxy_pass http://10.0.2.164:3000;
-	    include configs/proxy.conf;
-    }
+
+   root   /usr/share/nginx/html;
+       index index.tsx;
+
+	
+
+	location = /.well-known/apple-app-site-association {
+        default_type "application/json";
+	}
+	location = /public/apple-app-site-association {
+        default_type "application/json";
+        }
+       location / {
+           try_files $uri $uri/ /index.tsx;
+       }
 }
