--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -8,23 +8,15 @@ server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
 
-    server_name app.tmessage.net;
+    server_name socool.ai;
 
     ssl_certificate     /etc/ssl/socool.pem;
     ssl_certificate_key /etc/ssl/socool.key;
 
 
-   root   /usr/share/nginx/html;
+   root   /usr/share/nginx/tsx;
        index index.tsx;
 
-	
-
-	location = /.well-known/apple-app-site-association {
-        default_type "application/json";
-	}
-	location = /public/apple-app-site-association {
-        default_type "application/json";
-        }
        location / {
            try_files $uri $uri/ /index.tsx;
        }
