--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -14,7 +14,7 @@ server {
     ssl_certificate_key /etc/ssl/socool.key;
 
 
-   root   /usr/share/nginx/tsx;
+   root   /usr/share/nginx/html;
        index index.tsx;
 
        location / {
