--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -15,9 +15,9 @@ server {
 
 
    root   /usr/share/nginx/html;
-       index index.tsx;
+       index index.html;
 
        location / {
-           try_files $uri $uri/ /index.tsx;
+           try_files $uri $uri/ /index.html;
        }
 }
