--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.18.2",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
+    "dayjs": "^1.11.13",
     "i18next": "^23.11.5",
     "postcss": "^8.4.38",
     "react": "^18.3.1",
